--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,7 @@
 <div class="d-flex">
   <!--Sidebar-->
-  <div class="bg-dark border-right p-3" id="sidebar">
-    <h3 class="text-light">Gifs-App</h3>
-    <hr class="text-white" />
-    <div class="list-group list-reset">
-      <a class="list-group-item list-group-item-action" href="#">Dashboard</a>
-    </div>
-  </div>
+  <app-sidebar></app-sidebar>
   <!--End sidebar-->
 
-  <div class="container">
-    <div class="row p-3">
-      <div class="col">
-        <h5>Buscar</h5>
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Buscar gifs..."
-          name=""
-          id=""
-        />
-      </div>
-    </div>
-    <hr />
-    <div class="row">
-      <div class="col">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque
-        molestiae praesentium reiciendis quo magnam repudiandae dolor aperiam
-        corrupti nesciunt, error quae accusantium minus omnis, amet, dolorum
-        distinctio mollitia qui eaque ipsam nam voluptatem non iste aliquid.
-        Similique ut accusantium sequi!
-      </div>
-    </div>
-  </div>
+  <app-gifs-page class="container"></app-gifs-page>
 </div>
